# grim

./: .bash_history  .env  .gitignore  .python_history  README.md  _config.yml  build.sh  checks.ipynb  checks.py  doit.sh  index.html  mkdocs.yml  mypy.ini  pyproject.toml
assets/: legenda.xcf  mapgrid.xcf
assets/css/: adventures_style.css  sheet_cards_style.css
bases/grim/textualweb/: __init__.py  app.tcss
components/grim/character/: __init__.py  classes.py  core.py  races.py  stats.py
components/grim/character/layers/: __init__.py  classes.py  races.py
components/grim/dice/: __init__.py  core.py
components/grim/stats/: __init__.py  core.py
development/: app.py
docs/: index.md
modules/G0118_a_hole_in_the_plan/: text.html
modules/G0118_a_hole_in_the_plan/assets/img/: Orvienzo's mansion.xcf  collapsed_crypts.xcf  sewers.xcf  small city.xcf
obsidian/grim/: 2023-12-16.md  2024-01-06.md  Campaign.md  Idee.md  Malattia.md  next session.md
obsidian/grim/.obsidian/: app.json  appearance.json  community-plugins.json  daily-notes.json  hotkeys.json  workspace.json
obsidian/grim/.obsidian/plugins/obsidian-icon-folder/: data.json
obsidian/grim/.obsidian/plugins/obsidian-leaflet-plugin/: data.json
obsidian/grim/.obsidian/plugins/obsidian-markmind/: data.json
obsidian/grim/Campaign/: Diario.md  PCs.md  next session.md
obsidian/grim/Campaign/Events/: History Timeline.md
obsidian/grim/Campaign/Events/Triggers/: golem di pietra.md  incontro verso casa della strega.md  scontro fra lupi normali e corrotti.md
obsidian/grim/Campaign/Events/Years/: anno 2.md
obsidian/grim/Campaign/Factions/: Map.md
obsidian/grim/Campaign/Factions/_npcs/: Balak.md  Hildise Steinard.md  Il grande Bianco.md
obsidian/grim/Campaign/Factions/_stuff/: Il Sale.md  La lama.md  il mantello.md
obsidian/grim/Campaign/Places/: Il Limite.md  Zona.md
obsidian/grim/Campaign/Places/Foresta/: Caverna dei cristalli.md
obsidian/grim/Campaign/Places/Il Limite/: La Sirena e il Marinaio.md
obsidian/grim/Campaign/Places/dungeon/: Capanna della Strega.md
obsidian/grim/Campaign/World/: History Timeline.md  Locations.md  NPCs.md  Weather.md
obsidian/grim/Campaign/World/_npcs/: Balak.md  Freiny.md
obsidian/grim/Excalidraw/: Drawing 2023-12-04 06.51.20.excalidraw.md
obsidian/grim/_templates/: NPC.md  Next Session.md
projects/grimweb/: Dockerfile  pyproject.toml
projects/grimweb/files/app/: app.py
test/bases/grim/textualweb/: test_core.py
test/components/grim/character/: test_core.py
test/components/grim/dice/: test_core.py
test/components/grim/stats/: test_core.py
