[tool.poetry]
name = "grimweb"
version = "0.0.1"

authors = ["Simone Cittadini <simone.cittadini@protonmail.com>"]
license = ""

packages = [
    {include = "grim/dice", from = "../../components"},
    {include = "grim/stats", from = "../../components"},
    {include = "grim/character", from = "../../components"},
    {include = "grim/textualweb", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.13"
textual = "~1"
textual-dev = "~1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
